--- a/app/sass/theme/default/styles.scss
+++ b/app/sass/theme/default/styles.scss
@@ -27,7 +27,7 @@ input.ng-invalid {
     color: $error-color;
 }
 
-.filter-select {
+.select {
     button {
         border-radius: 0.55em;
         &:focus {
