--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -3,5 +3,5 @@
         <i class="fa fa-chevron-right"></i>
         <span translate="RUNNER.AVAILABLE.FILTER_START"></span>
     </span>
-    <div class="filter-select" filter-select="sets"></div>
+    <div class="select" filter-select="sets"></div>
 </div>
