--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -585,9 +585,9 @@ div.layout > header .title, div.layout > header .search {
   -webkit-transition: opacity linear 1s;
   -moz-transition: opacity linear 1s;
   transition: opacity linear 1s;
-  opacity: 0; }
-  div.layout > header .title.show, div.layout > header .search.show {
-    opacity: 1; }
+  opacity: 1; }
+  div.layout > header .title.ng-hide, div.layout > header .search.ng-hide {
+    opacity: 0; }
 div.layout > aside {
   -webkit-transition: all cubic-bezier(0, 0, 0.2, 1) 0.5s;
   -moz-transition: all cubic-bezier(0, 0, 0.2, 1) 0.5s;
@@ -621,6 +621,15 @@ div.layout > aside {
   opacity: 0; }
   .list-animate.ng-enter.ng-enter-active {
     opacity: 1; }
+
+.select-dropdown {
+  opacity: 1; }
+  .select-dropdown.ng-hide {
+    opacity: 0; }
+  .select-dropdown.ng-hide-add {
+    -webkit-transition: all linear 0.1s 0.1s;
+    -moz-transition: all linear 0.1s 0.1s;
+    transition: all linear 0.1s 0.1s; }
 
 input.ng-invalid {
   -webkit-transition: all linear 0.1s;
