--- a/app/views/header.html
+++ b/app/views/header.html
@@ -1,8 +1,8 @@
 <header ng-controller="HeaderCtrl as header">
-    <div class="title" ng-class="{true: 'show'}[app.loaded]">
+    <div class="title ng-hide" ng-show="app.loaded">
         <span>{{ header.title }}</span>
     </div>
-    <div class="search" ng-class="{true: 'show'}[app.loaded]">
+    <div class="search ng-hide" ng-show="app.loaded">
         <i class="fa fa-search"></i>
         <input type="text" name="search" id="search" placeholder="Search" />
     </div>
