--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -6,6 +6,7 @@
 @import 'theme/default/variables';
 @import 'components/vendor/mixins';
 @import 'components/vendor/progress';
+@import 'components/vendor/icons';
 @import 'theme/default/styles';
 // application styles
 @import 'components/mixins';
