--- a/app/sass/theme/default/fancify.scss
+++ b/app/sass/theme/default/fancify.scss
@@ -1,3 +1,6 @@
+$view-animate-hide-speed: 0.7s;
+$view-animate-show-speed: 1s;
+
 div.layout {
     > header {
         .title {
@@ -40,9 +43,9 @@ div.layout {
     }
     > aside {
         @include transition(all cubic-bezier(0, 0, 0.2, 1) 0.5s);
-        left: -$menu-size;
-        &.show {
-            left: 0;
+        left: 0;
+        &.ng-hide {
+            left: -$menu-size;
         }
         .sections li {
             @include transition(background linear 0.1s);
@@ -52,13 +55,13 @@ div.layout {
 
 .view-animate {
     &.ng-leave {
-        @include transition(all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.7s);
+        @include transition(all cubic-bezier(0.250, 0.460, 0.450, 0.940) $view-animate-hide-speed);
         &.ng-leave-active {
             opacity: 0;
         }
     }
     &.ng-enter {
-        @include transition(all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s 0.7s);
+        @include transition(all cubic-bezier(0.250, 0.460, 0.450, 0.940) $view-animate-show-speed $view-animate-hide-speed);
         opacity: 0;
         &.ng-enter-active {
             opacity: 1;
@@ -68,11 +71,19 @@ div.layout {
 
 .list-animate {
     &.ng-enter {
-        @include transition(all cubic-bezier(0.250, 0.460, 0.450, 0.940) 1s 0.7s);
+        @include transition(all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.1);
         opacity: 0;
         &.ng-enter-active {
             opacity: 1;
         }
+    }
+}
+
+.appear-delayed {
+    @include transition(all cubic-bezier(0.250, 0.460, 0.450, 0.940) $view-animate-show-speed $view-animate-hide-speed);
+    opacity: 1;
+    &.ng-hide {
+        opacity: 0;
     }
 }
 
@@ -88,4 +99,8 @@ div.layout {
 
 input.ng-invalid {
     @include transition(all linear 0.1s);
+}
+
+.progress-bar .meter {
+    @include transition(all linear 0.2s);
 }
