--- a/app/sass/theme/default/variables.scss
+++ b/app/sass/theme/default/variables.scss
@@ -74,3 +74,5 @@ $filter-list-color:               lighten($dark-gray,20%);
 $filter-button-list-bg-color:     white;
 $filter-list-highlight-bg-color:  darken($filter-button-list-bg-color,5%);
 $filter-select-list-font-size:    1.1em;
+$filter-button-max-width:         10em;
+$filter-button-min-width:         6em;
