--- a/app/views/header.html
+++ b/app/views/header.html
@@ -3,7 +3,7 @@
         <span>{{ header.title }}</span>
     </div>
     <div class="search ng-hide" ng-show="app.loaded">
-        <i class="fa fa-search"></i>
+        <i class="icon fa-search"></i>
         <input type="text" name="search" id="search" placeholder="Search" />
     </div>
 </header>
