--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -1,6 +1,6 @@
-<div class="top-filter">
+<div class="top-filter appear-delayed ng-hide" ng-show="filterLoaded">
     <span>
-        <i class="fa fa-chevron-right"></i>
+        <i class="icon fa-chevron-right"></i>
         <span translate="RUNNER.AVAILABLE.FILTER_START"></span>
     </span>
     <div class="select" filter-select="sets"></div>
