--- a/app/views/runner/available.html
+++ b/app/views/runner/available.html
@@ -1,7 +1,1 @@
-<div class="top-filter appear-delayed ng-hide" ng-show="filterLoaded">
-    <span>
-        <i class="icon fa-chevron-right"></i>
-        <span translate="RUNNER.AVAILABLE.FILTER_START"></span>
-    </span>
-    <div class="select" filter-select="sets"></div>
-</div>
+<div ng-include="'views/runner/filter.html'" include-replace></div>
