--- a/app/sass/theme/styles.scss
+++ b/app/sass/theme/styles.scss
@@ -16,20 +16,20 @@ input[type="submit"], button {
 input.ng-invalid {
     border-color: $error-color;
     background-color: lighten($error-color, 45%);
-    box-shadow: inset 0 1px 8px lighten($error-color, 30%);
+    box-shadow: inset 0 1px 8px lighten($error-color, 30%), 0 0px 8px lighten($error-color, 30%);
 }
 
 .error-feedback {
     display: block;
     padding: 0.5em;
-    background-color: rgba($body-color, 0.15);
+    background-color: $error-color;
     border-radius: $base-border-radius;
-    color: $error-color;
+    color: $body-bg-color;
 }
 
 .select {
     button {
-        border-radius: 0.55em;
+        border-radius: 0.45em;
         &:focus {
             outline: 0;
         }
