--- a/app/views/directives/select.html
+++ b/app/views/directives/select.html
@@ -1,4 +1,4 @@
-<button ng-click="toggle()" ng-blur="hide()">
+<button ng-click="toggle()" ng-blur="hide()" ng-class="{true: 'active'}[show]">
     <span>{{options.active.value}}</span><i class="icon fa-caret-down"></i>
 </button>
 <ul class="select-dropdown ng-hide" ng-show="show">
