Cleanup styles for the dropdown select and add scrollbar to select in case of many items

--- a/app/sass/theme/styles.scss
+++ b/app/sass/theme/styles.scss
@@ -36,6 +36,6 @@ input.ng-invalid {
     }
     ul {
         border-radius: 0.3em;
-        @include css-triangle(0.5em, $filter-list-border-width, $filter-list-border-color, top, $filter-button-list-bg-color);
+        @include css-triangle(0.5em, $filter-list-border-width, $filter-list-border-color, top, $filter-list-bg-color);
     }
 }
