--- a/app/sass/theme/variables.scss
+++ b/app/sass/theme/variables.scss
@@ -67,14 +67,17 @@ $section-list-side-padding:       0.6em;
 // filter buttons
 $filter-button-padding:           0.5em;
 $filter-button-border:            none;
+
+// filter select list
 $filter-list-border-width:        0.1em;
 $filter-list-border-color:        lighten($gray,10%);
 $filter-list-border:              $filter-list-border-color $filter-list-border-width solid;
 $filter-list-color:               lighten($dark-gray,20%);
-$filter-button-list-bg-color:     white;
-$filter-list-highlight-bg-color:  darken($filter-button-list-bg-color,5%);
-$filter-select-list-font-size:    1.1em;
-$filter-button-max-width:         14em;
-$filter-button-min-width:         10em;
-$filter-select-bg-color:          lighten($light-gray,5%);
-$filter-button-margin:            0.3em;
+$filter-list-bg-color:            white;
+$filter-list-highlight-bg-color:  darken($filter-list-bg-color,5%);
+$filter-list-font-size:           1.1em;
+$filter-list-button-max-width:    14em;
+$filter-list-button-min-width:    10em;
+$filter-list-button-bg-color:     $body-bg-color;
+$filter-list-button-margin:       0.3em;
+$filter-list-max-height:          12em;
