--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,7 @@
 button,
 input[type="submit"] {
   -webkit-font-smoothing: antialiased;
-  background-color: #477dca;
+  background-color: #477DCA;
   border-radius: 0.1875em;
   color: white;
   display: inline-block;
@@ -18,7 +18,7 @@ input[type="submit"] {
 body {
   -webkit-font-smoothing: antialiased;
   background-color: white;
-  color: #333333;
+  color: #333;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
   line-height: 1.5; }
@@ -54,7 +54,7 @@ a {
   -webkit-transition: color 0.1s linear;
   -moz-transition: color 0.1s linear;
   transition: color 0.1s linear;
-  color: #477dca;
+  color: #477DCA;
   text-decoration: none; }
   a:hover {
     color: #2c5999; }
@@ -63,7 +63,7 @@ a {
     outline: none; }
 
 hr {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDD;
   border-left: none;
   border-right: none;
   border-top: none;
@@ -74,7 +74,7 @@ img {
   max-width: 100%; }
 
 blockquote {
-  border-left: 2px solid #dddddd;
+  border-left: 2px solid #DDD;
   color: #595959;
   margin: 1.5em 0;
   padding-left: 0.75em; }
@@ -87,7 +87,7 @@ cite {
 
 fieldset {
   background: #f7f7f7;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   margin: 0 0 0.75em 0;
   padding: 1.5em; }
 
@@ -117,7 +117,7 @@ select[multiple=multiple] {
   transition: border-color;
   background-color: white;
   border-radius: 0.1875em;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1em;
@@ -131,7 +131,7 @@ select[multiple=multiple] {
   textarea:focus,
   input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus,
   select[multiple=multiple]:focus {
-    border-color: #477dca;
+    border-color: #477DCA;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
     outline: none; }
 
@@ -172,7 +172,7 @@ th {
   text-align: left; }
 
 td {
-  border-bottom: 1px solid #dddddd;
+  border-bottom: 1px solid #DDD;
   padding: 0.75em 0; }
 
 tr, td, th {
@@ -210,7 +210,7 @@ input[type="submit"] {
 
 .progress-bar {
   background-color: #f2f2f2;
-  border: 1px solid #dddddd;
+  border: 1px solid #DDD;
   box-shadow: inset 0 0 3px 0 rgba(115, 115, 115, 0.15);
   border-radius: 0.1875em;
   height: 30px;
@@ -224,7 +224,7 @@ input[type="submit"] {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    background-color: #049cdb;
+    background-color: #049CDB;
     background-image: -webkit-linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%);
     background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%);
     background-size: 40px 40px;
@@ -238,31 +238,26 @@ input[type="submit"] {
 @-webkit-keyframes progress {
   0% {
     background-position: 0px 0px; }
-
   100% {
     background-position: 40px 0px; } }
 @-moz-keyframes progress {
   0% {
     background-position: 0px 0px; }
-
   100% {
     background-position: 40px 0px; } }
 @-ms-keyframes progress {
   0% {
     background-position: 0px 0px; }
-
   100% {
     background-position: 40px 0px; } }
 @-o-keyframes progress {
   0% {
     background-position: 0px 0px; }
-
   100% {
     background-position: 40px 0px; } }
 @keyframes progress {
   0% {
     background-position: 0px 0px; }
-
   100% {
     background-position: 40px 0px; } }
 .icon, .select ul li.active:after {
@@ -275,7 +270,7 @@ input[type="submit"] {
   -moz-osx-font-smoothing: grayscale; }
 
 input[type="submit"].primary, button.primary {
-  background-color: #049cdb;
+  background-color: #049CDB;
   color: white; }
   input[type="submit"].primary:hover, button.primary:hover {
     background-color: #0378a9;
@@ -347,7 +342,7 @@ input.ng-invalid {
     margin-bottom: 0.22222em; }
     .intro h1 i {
       margin-right: 0.25em;
-      color: #049cdb; }
+      color: #049CDB; }
   .intro h2 {
     font-size: 2.5em;
     margin-bottom: 0.83333em; }
@@ -385,7 +380,7 @@ input.ng-invalid {
 body {
   margin: 0;
   background-color: #e6e6e6;
-  color: #333333; }
+  color: #333; }
   body h1, body h2, body h3, body h4 {
     font-weight: normal; }
 
@@ -401,7 +396,7 @@ div.layout {
     position: fixed;
     z-index: 10000; }
     div.layout > header .title, div.layout > header .search {
-      color: #dddddd;
+      color: #DDD;
       font-size: 2em;
       position: relative;
       float: left; }
@@ -432,11 +427,11 @@ div.layout {
         background: none;
         border: none;
         box-shadow: none;
-        color: #dddddd;
+        color: #DDD;
         border-radius: 0; }
         div.layout > header .search input:-webkit-autofill {
           -webkit-box-shadow: 0 0 0 50px #1a1a1a inset;
-          -webkit-text-fill-color: #dddddd; }
+          -webkit-text-fill-color: #DDD; }
   div.layout > aside, div.layout > .main {
     top: 4em; }
   div.layout > aside {
@@ -470,7 +465,7 @@ div.layout {
           color: white; }
         div.layout > aside .modules li.active {
           background: black;
-          color: #049cdb; }
+          color: #049CDB; }
         div.layout > aside .modules li i.reporter:before {
           content: "\f0f6"; }
         div.layout > aside .modules li i.runner:before {
@@ -499,7 +494,7 @@ div.layout {
         cursor: pointer;
         border-color: #aaaaaa; }
       div.layout > aside .sections li.active {
-        border-color: #049cdb; }
+        border-color: #049CDB; }
     div.layout > aside h1 {
       font-size: 2em;
       display: block;
@@ -525,12 +520,12 @@ div.layout {
     font-size: 1.4em;
     margin-top: -0.2em; }
     .top-filter button span {
-      color: #049cdb; }
+      color: #049CDB; }
 
 .select {
   position: relative; }
   .select button {
-    background: #eaeaea;
+    background: #e6e6e6;
     max-width: 14em;
     min-width: 0;
     text-align: left;
@@ -564,7 +559,9 @@ div.layout {
     background: white;
     width: 100%;
     padding: 0.5em 0;
-    border: #c4c4c4 0.1em solid; }
+    border: #c4c4c4 0.1em solid;
+    max-height: 12em;
+    overflow-y: auto; }
     .select ul li {
       display: block;
       overflow: hidden;
@@ -572,7 +569,7 @@ div.layout {
       text-overflow: ellipsis;
       padding: 0.3em 1em; }
       .select ul li:hover, .select ul li.active {
-        color: #049cdb; }
+        color: #049CDB; }
       .select ul li:hover {
         background: #f2f2f2;
         cursor: pointer; }
@@ -693,3 +690,5 @@ input.ng-invalid {
   -webkit-transition: all linear 0.2s;
   -moz-transition: all linear 0.2s;
   transition: all linear 0.2s; }
+
+/*# sourceMappingURL=main.css.map */
