--- a/app/sass/components/modules/select.scss
+++ b/app/sass/components/modules/select.scss
@@ -1,67 +1,52 @@
 .select {
-    $select-border: $filter-button-border;
-    $select-background: $filter-select-bg-color;
-    $select-padding: $filter-button-padding;
-    $select-arrow-margin: $filter-button-padding;
-    $select-arrow-color: $section-header-color;
-    $select-list-color: $filter-list-color;
-    $select-list-font-size: $filter-select-list-font-size;
-    $select-list-top-pos: 2.5em / $filter-select-list-font-size + $filter-button-padding;
-    $select-list-bg: $filter-button-list-bg-color;
-    $select-list-pad: $filter-button-padding 0;
-    $select-list-border: $filter-list-border;
-    $select-list-item-hover-color: $base-accent-color;
-    $select-list-item-hover-bg: $filter-list-highlight-bg-color;
-    $select-max-width: $filter-button-max-width;
-    $select-min-active-width: $filter-button-min-width;
-    $select-button-margin: $filter-button-margin;
-
     position: relative;
     button {
-        background: $select-background;
-        max-width: $select-max-width;
+        background: $filter-list-button-bg-color;
+        max-width: $filter-list-button-max-width;
         min-width: 0;
         text-align: left;
-        margin-left: $select-button-margin;
-        margin-right: $select-button-margin;
+        margin-left: $filter-list-button-margin;
+        margin-right: $filter-list-button-margin;
         &.active {
-            min-width: $select-min-active-width;
+            min-width: $filter-list-button-min-width;
         }
-        border: $select-border;
-        padding: ( $select-padding / 2 ) $select-padding;
+        border: $filter-button-border;
+        padding: ( $filter-button-padding / 2 ) $filter-button-padding;
         i {
             position: absolute;
-            right: $select-padding * 2;
+            right: $filter-button-padding * 2;
             top: 25%;
-            margin-left: $select-arrow-margin;
-            color: $select-arrow-color;
+            margin-left: $filter-button-padding;
+            color: $section-header-color;
         }
         span {
             @include ellipsis;
-            margin-right: $select-padding * 3;
-            line-height: 1 + $select-padding;
+            margin-right: $filter-button-padding * 3;
+            line-height: 1 + $filter-button-padding;
         }
     }
     ul {
         position: absolute;
         text-align: left;
-        color: $select-list-color;
+        color: $filter-list-color;
         font-weight: normal;
-        font-size: $select-list-font-size;
+        font-size: $filter-list-font-size;
         left: 0;
-        top: $select-list-top-pos;
-        background: $select-list-bg;
+        top: 2.5em / $filter-list-font-size + $filter-button-padding;
+        background: $filter-list-bg-color;
         width: 100%;
-        padding: $select-list-pad;
-        border: $select-list-border;
+        padding: $filter-button-padding 0;
+        border: $filter-list-border;
+        max-height: $filter-list-max-height;
+        overflow-y: auto;
         li {
             @include ellipsis;
             padding: 0.3em 1em;
             &:hover, &.active {
-                color: $select-list-item-hover-color;
+                color: $base-accent-color;
             }
             &:hover {
-                background: $select-list-item-hover-bg;
+                background: $filter-list-highlight-bg-color;
                 cursor: pointer;
             }
             &.active {
@@ -69,7 +54,7 @@
                     @extend .icon;
                     line-height: inherit;
                     content: "\f00c";
-                    color: $select-list-color;
+                    color: $filter-list-color;
                     float: right;
                 }
             }
